--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-csv": "^1.1.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
+    "react-https-redirect": "^1.1.0",
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
     "react-router-config": "^1.0.0-beta.4",
